Clean up bibliography example
The \bibliography command should not be at the top, but rather with the
rest of the example code.

--- a/template-for-cv-researchers.tex
+++ b/template-for-cv-researchers.tex
@@ -1,7 +1,5 @@
 \documentclass[cv,partner]{nfr}
 
-\bibliographystyle{abbrvnat}
-
 \begin{document}
 
 % CV template for researchers from the official NFR Word template. Use class
@@ -131,6 +129,7 @@ sector/other)}
 % This uses \renewcommand so that LaTeX doesn't print a "References" section header
 % \nocite{*}
 % \renewcommand\section[2]{}
+% \bibliographystyle{abbrvnat}
 % \bibliography{refs}
 
 \begin{quote}
